[package]
name = "wormhole"
version = "0.1.0"
edition = "2024"
authors = ["ACMS (Australian Computer Museum Society)"]

[dependencies]
bytecodec = "0.5.0"
chrono = "0.4"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false, features = ["events", "bracketed-paste"] }
ctrlc = "3.5.1"
futures = "0.3.31"
hostname = "0.4.2"
igd-next = "0.16.2"
libc = "0.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_ini = "0.2.0"
serialport = { version = "4.8.1", default-features = false }
socket2 = "0.5"
stun_codec = "0.4.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
nokhwa = { version = "0.10", features = ["input-v4l"] }
image = "0.25"
gemini-rust = "1.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
serialport = { version = "4.8.1", default-features = false, features = ["libudev"] }
